# grafika_linia

./: .gitignore  CMakeLists.txt  animation.cpp  animation.hpp  arms.cpp  arms.hpp  controls.cpp  controls.hpp  conveyor.cpp  conveyor.hpp  conveyorDrawing.cpp  main.cpp  normals.cpp  normals.hpp  product.cpp  product.hpp  vector.hpp  vector.tpp
